# powercord

./: .cursorrules  .dockerignore  .env.prod.example  .example.env  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  alembic.ini  clear_pg_locks.py  cloudbuild.yaml  debug_bypass.py  debug_caching.py  debug_test.py  devkit.just  docker-compose.yml  find_culprit.py  nginx.conf  packer.pkr.hcl  pyproject.toml  run_full_suite_debug.py  run_seq.py  show_env.py  skills-lock.json  start.sh  startup-script.sh  supervisord.conf
.agent/rules/: default-instructions.md
.agents/workflows/: audit-workflow-downstream-server.md  fresh-install-downstream-server.md  fresh-install-downstream.md
alembic/: env.py
alembic/versions/: 0caed23d30a5_add_security_alert_overrides.py  0d691a5a07c0_add_midi_library_tables.py  1c7fc4ef8015_add_api_keys_and_access_roles.py  4d30ec975899_initial_core.py  4df1cf89e983_initial_migration.py  4f239f105949_add_grid_xy_to_widget_settings.py  538f3c91e146_message_add_auto_increment.py  6991c1eb9a2f_add_honeypot_logging_and_shame_mode.py  84806fb16462_message_fix_schema.py  85c3de0b173c_add_auditor_and_settings_tables.py  98464d906f8f_hash_api_keys_and_add_user_roles.py  9a36ad5e5114_add_dashboard_access_role.py  a1b2c3d4e5f6_enable_pg_trgm.py  a834c5693087_add_custom_content.py  de37210f06b0_add_has_frame_to_custom_content.py  ef5054faa23a_fix_honeypot_settings_pk.py  f123456789ab_create_missing_core_tables.py  f93f62c123e1_message_manual_fix_id_sequence.py  f9e3c8d1e7b6_refactor_settings.py
app/: __init__.py  bootstrap.py  main_api.py  main_bot.py  main_ui.py
app/api/: api_logging.py  dependencies.py  responses.py
app/bot/: embeds.py  internal_server.py  powerloader.py  views.py
app/common/: alchemy.py  discord_constants.py  extension_hooks.py  extension_loader.py  extension_manager.py  gsm_loader.py  guild_cog.py  logger.py  testing.py
app/db/: add_admin.py  db_tools.py  ensure_tables.py  init.sql  manage_api_keys.py  models.py  remove_admin.py  reset_dashboard_admins.py  search.py
app/static/: swagger.css  theme.css
app/ui/: auth.py  components.py  dashboard.py  helpers.py  page.py
docs/: GCP.md  INTENTS.md  LEGACY_V2_MIGRATION.md  SECURITY_AUDITOR.md  SETUP.md  TESTING.md  api.md  api_developer_guide.md  cogs.md  db.md  discovery.md  extensions.md  justfile.md  swagger_styling.md  utilities.md
terraform/: compute.tf  iam.tf  locals.tf  main.tf  monitoring.tf  network.tf  outputs.tf  providers.tf  secrets.tf  storage.tf  terraform.tf  variables.tf
tests/: conftest.py  test_utilities.py  test_utilities_widget.py  verify_dashboard_link.py
tests/integration/: test_admin_routes.py  test_api.py  test_db_connection.py  test_public_home.py  test_utilities_extension.py
tests/unit/: test_admin_guards.py  test_alchemy.py  test_api_auth.py  test_auditor_settings_features.py  test_auth.py  test_bot.py  test_caching_adversarial.py  test_dashboard_page.py  test_dashboard_page_stress.py  test_ext_custom_content.py  test_extension_hooks.py  test_extension_loader.py  test_extension_manager.py  test_gsm_loader.py  test_guild_cog.py  (+18 more)
(+20 files in other folders)
